TM-11336 Fix support grid squished

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -48,7 +48,7 @@
     th, td
       font-size: 13px
       line-height: 12px
-      padding: 0px 4px
+      padding: 4px 5px
       text-align: left
       input
         border: 1px solid #ccc
@@ -232,6 +232,7 @@
         &.odd
           background: #e0e0e0
         td
+          height: 30px
           &.dep-Validated
 	          background: LightGreen
           &.dep-Unknown
